kubernetes/apps/lidarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lidarr
  labels:
    backup: enabled
