kubernetes/apps/lidarr/lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      priorityClassName: app-default
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.0.4875-ls35
          ports:
            - name: http
              containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: library
              mountPath: /music
            - name: downloads
              mountPath: /downloads
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: library
          persistentVolumeClaim:
            claimName: library
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
spec:
  selector:
    app: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: lidarr
spec:
  parentRefs:
    - name: internal
      namespace: cilium-gateway
  hostnames:
    - lidarr.home.demivan.me
  rules:
    - backendRefs:
        - name: lidarr
          port: 8686
